[project]
name = "adept"
description = "Automatic-Differentiation-Enabled Plasma Transport in JAX"
readme = "README.md"
authors = [
    {name = "Archis Joglekar/Ergodic LLC", email="archis@ergodic.io"},
]
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.11"
dependencies = [
    "lineax @ git+https://github.com/patrick-kidger/lineax.git",
    "diffrax @ git+https://github.com/patrick-kidger/diffrax.git@dev",
    "matplotlib",
    "scipy",
    "numpy",
    "tqdm",
    "xarray",
    "mlflow",
    "flatdict",
    "h5netcdf",
    "optax",
    "boto3",
    "pint",
    "plasmapy",
    "psutil",
    "mlflow-export-import",
    "interpax",
    "tabulate",
    "pydantic",
    "scienceplots",
    "jax==0.6.2"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ergodicio/adept"
Documentation = "https://adept.readthedocs.io/en/latest/"

[project.optional-dependencies]
cpu = []
gpu = [
    "jax[cuda12]==0.6.2",
    "pynvml"
]
docs = [
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinx_copybutton",
    "sphinx-rtd-theme",
    "sphinx-github-style",
    "adept"
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "typeguard",
    "adept[docs]",
]

[build-system]
requires = ["hatchling", "hatch-vcs", "toml"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "adept/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
# Test type hints w/ typeguard - currently disabled
# addopts = ["--typeguard-packages=adept"]
addopts = "--import-mode=importlib --strict-markers"
pythonpath = "."
testpaths = ["tests"]
filterwarnings = [
    "error",
    # ignored by default
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    # raised by Cython, usually harmless
    "ignore:numpy.dtype size changed",
    "ignore:numpy.ufunc size changed",
    # sometimes, dependencies leak resources
    "ignore:.*socket\\.socket.*:pytest.PytestUnraisableExceptionWarning",
]
